qa issues fixed

--- a/nova-components/Main/resources/css/card.css
+++ b/nova-components/Main/resources/css/card.css
@@ -3,37 +3,90 @@
     margin-bottom: 30px;
 } */
 @keyframes blink {
-	0% {opacity: 0}
-  20% {opacity: 0.1}
-  30% {opacity: 0.3}
-  40% {opacity: 0.5}
-	49%{opacity: 0.8}
-	50% {opacity: 1}
+    0% {
+            opacity: 0
+        }
+    
+        20% {
+            opacity: 0.1
+        }
+    
+        30% {
+            opacity: 0.3
+        }
+    
+        40% {
+            opacity: 0.5
+        }
+    
+        49% {
+            opacity: 0.8
+        }
+    
+        50% {
+            opacity: 1
+        }
 }
 .logo-box img {
-    max-width: 300px;
+    max-width: 550px;
 }
-.main-wrapper p{font-size: 18px; line-height: normal; margin-bottom: 0.5em;}
-.main-wrapper h1, .main-wrapper h2, .main-wrapper h3, .main-wrapper h4, .main-wrapper h5, .main-wrapper h6{font-weight: 700;}
+.main-wrapper p {
+    font-size: 18px;
+    line-height: normal;
+    margin-bottom: 0.5em;
+    text-shadow: 2px 1px 3px #000000d9;
+}
+
+.main-wrapper h1,
+.main-wrapper h2,
+.main-wrapper h3,
+.main-wrapper h4,
+.main-wrapper h5,
+.main-wrapper h6 {
+    font-weight: 700;
+}
 .main-content-box h2 {
     font-size: 40px;
     font-weight: 900;
     text-transform: uppercase;
     line-height: normal;
     margin-bottom: 0.5em;
-} 
+    text-shadow: 2px 1px 3px #000000d9;
+}
+
 /* .main-wrapper .main-content-box h2{animation: blink 3s infinite;} */
 .main-wrapper {
     background-image: url('https://noospherehealingchamber.exponentialhealthcare.com/img/noosphere-healing-chamber-dashboard-new.jpg');
-    padding: 30px 5% 100px 5%;
+    padding: 30px 2% 100px 2%;
     color: #fff;
     min-height: 80vh;
+    background-size: cover;
+        background-position: center;
+        position: relative;
+    }
+    
+    .main-wrapper:before {
+        background-color: rgba(0, 0, 0, 0.4);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        content: "";
+        display: inline-block;
+        z-index: 0;
 }
 
 .main-wrapper .main-inner {
-    display: grid;
+    display: flex;
     grid-gap: 30px;
-    grid-template-columns: 1fr 1fr;
+    position: relative;
+        z-index: 1;
+    }
+    
+    .main-wrapper .logo-box {
+        position: relative;
+        z-index: 1;
 }
 
 a.btn.btn-element {
@@ -56,6 +109,7 @@ a.btn.btn-season {
 
 .main-content-box {
     text-align: center;
+    width: 54%;
 }
 
 .button-row {
@@ -63,17 +117,26 @@ a.btn.btn-season {
     justify-content: space-evenly;
     margin-top: 30px;
 }
+
 .main-video-box {
     margin-top: 45px;
+    width: 50%;
 }
 
 .main-wrapper iframe {
     width: 100%;
 }
-@media all and (max-width:1600px){
-    .main-wrapper p{font-size: 14px;}
-    .main-content-box h2 {font-size: 24px;}
+@media all and (max-width:1600px) {
+    .main-wrapper p {
+        font-size: 13px;
+    }
+.main-content-box h2 {
+    font-size: 24px;
 }
-@media all and (max-width:1200px){
-    .main-wrapper .main-inner{grid-template-columns: 1fr;}
+}
+
+@media all and (max-width:1200px) {
+    .main-wrapper .main-inner {
+        grid-template-columns: 1fr;
+    }
 }
